# lhm

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  readme.md
build_check/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  compile_commands.json
build_check/common/: Makefile  cmake_install.cmake
build_check/models/: Makefile  cmake_install.cmake
build_check/models/chat/: Makefile  cmake_install.cmake
build_check/models/kvcache/: Makefile  cmake_install.cmake
build_check/models/llm/: Makefile  cmake_install.cmake
build_check/models/loader/: Makefile  cmake_install.cmake
build_check/models/memory/: Makefile  cmake_install.cmake
build_check/models/params/: Makefile  cmake_install.cmake
build_check/src/: Makefile  cmake_install.cmake
build_check/src/llm_cli/: Makefile  cmake_install.cmake
build_check/src/llm_server/: Makefile  cmake_install.cmake
cmake/: common.cmake  download-models.cmake
common/: CMakeLists.txt  arg.cpp  arg.h  assert.h  base64.hpp  chat.cpp  chat.h  chat_auto_parser_generator.cpp  chat_auto_parser_helpers.cpp  chat_auto_parser_helpers.h  chat_diff_analyzer.cpp  chat_peg_parser.cpp  common.cpp  common.h  common_params.cpp  common_params.h  config.cpp  config.h  console.cpp  console.h  debug.cpp  download.cpp  fit.cpp  fit.h  hf_cache.cpp  http.h  imatrix_loader.cpp  json_partial.cpp  json_schema_to_grammar.cpp  lassert.h  lhm_assert.h  llguidance.cpp  log.cpp  log.h  ngram_cache.cpp  ngram_cache.h  ngram_map.cpp  ngram_map.h  ngram_mod.cpp  peg_parser.cpp  (+11 more)
common/jinja/: README.md  caps.cpp  lexer.cpp  runtime.cpp  runtime.h  value.cpp
json/nlohmann/: json.hpp
json_compat/nlohmann/: json.hpp  json_fwd.hpp  rj_json.h
lhm/: lhm.h  lhm_cpp.h
models/: CMakeLists.txt  fit.cpp  lhm.cpp  lhm_adapter.cpp  lhm_adapter.h  lhm_arch.cpp  lhm_arch.h  lhm_batch.cpp  lhm_batch.h  lhm_chat.cpp  lhm_chat.h  lhm_common.cpp  lhm_common.h  lhm_context.cpp  lhm_context.h  lhm_ext.h  lhm_grammar.cpp  lhm_grammar.h  lhm_graph.cpp  lhm_graph.h  lhm_impl.cpp  lhm_impl.h  lhm_io.cpp  lhm_io.h  lhm_model.cpp  lhm_model.h  lhm_quant.cpp  lhm_sampler.cpp  lhm_sampler.h  lhm_vocab.cpp  lhm_vocab.h  speculative.cpp  unicode.cpp  unicode_data.cpp
models/chat/: CMakeLists.txt  chat.cpp  chat.h  chat_auto_parser.h  chat_auto_parser_generator.cpp  chat_auto_parser_helpers.cpp  chat_diff_analyzer.cpp  chat_peg_parser.cpp  chat_peg_parser.h
models/graph/: CMakeLists.txt  lhm_graph.cpp  lhm_graph.h  lhm_graph_dsv4.cpp  lhm_graph_dsv4.h
models/kvcache/: CMakeLists.txt  lhm_kv_cache.cpp  lhm_kv_cache.h  lhm_kv_cache_dsa.cpp  lhm_kv_cache_dsa.h  lhm_kv_cache_dsv4.cpp  lhm_kv_cache_dsv4.h  lhm_kv_cache_iswa.cpp  lhm_kv_cache_iswa.h  lhm_kv_cache_mooncake.cpp  lhm_kv_cache_mooncake.h  lhm_kv_cells.h  readme.md
models/llm/: CMakeLists.txt  base_models.h  deepseekv4.cpp  deepseekv4.h  delta_net_base.cpp  models.h  qwen35.cpp  qwen35.h  qwen35moe.cpp  qwen35moe.h
models/loader/: CMakeLists.txt  lhm_mmap.cpp  lhm_mmap.h  lhm_model-loader.cpp  lhm_model-loader.h  lhm_model-saver.cpp  lhm_model-saver.h  lhm_model_loader.cpp  lhm_model_loader.h  lhm_model_saver.cpp  lhm_model_saver.h
models/memory/: CMakeLists.txt  chat_diff_analyzer.cpp  lhm_memory.cpp  lhm_memory.h  lhm_memory_hybrid.cpp  lhm_memory_hybrid.h  lhm_memory_hybrid_iswa.cpp  lhm_memory_hybrid_iswa.h  lhm_memory_recurrent.cpp  lhm_memory_recurrent.h
models/params/: CMakeLists.txt  lhm_cparams.cpp  lhm_cparams.h  lhm_hparams.cpp  lhm_hparams.h
src/: CMakeLists.txt
src/llm_cli/: CMakeLists.txt  cli.cpp  cli.h  main.cpp
src/llm_server/: CMakeLists.txt  README.md  main.cpp  server.cpp  server.h  server_chat.cpp  server_chat.h  server_common.cpp  server_common.h  server_context.cpp  server_context.h  server_cors_proxy.h  server_http.cpp  server_models.cpp  server_models.h  server_queue.cpp  server_queue.h  server_schema.cpp  server_schema.h  server_task.cpp  server_task.h  server_tools.cpp  server_tools.h
